# rs8

./: .gitignore  README.md  config.py  iv8_demo.py  main.py  opencode.json  pyproject.toml
.opencode/skills/rs8/: skill.jsonc  skill.md
adapters/: __init__.py  base.py  rs6.py
api/: models.py  routes.py  server.py
core/: curl.py  engine.py  env_builder.py  pipeline.py  types.py
detectors/: auto.py  base.py  registry.py  rs6.py
plugins/: base.py  canvas.py  wasm.py  webgl.py  worker.py
profiles/: chrome_124.py  chrome_130.py  chrome_136.py  edge_130.py  firefox_136.py
recipes/: __init__.py  base.py  ouyeel.py
ui/static/: app.js  style.css
ui/templates/: index.html
