[project]
name = "rs8"
version = "0.1.0"
description = "Universal Ruishu anti-crawler bypass framework based on iv8"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iv8>=0.1.3",
    "requests>=2.31.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.scripts]
rs8 = "main:main"
